--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">VOHoportunitysconect</string>
+    <string name="app_name">VO Hoportunitys Conect</string>
     <string name="game_services_project_id">490743356878</string>
     <string name="game_services_api_key">AIzaSyB581wW737gDNSDq_bCa7iOJ0V6b29Pibo</string>
     <string name="game_services_client_id">490743356878-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx.apps.googleusercontent.com</string>
@@ -22,7 +22,7 @@
     <string name="bio">Bio</string>
     <string name="save_profile">Save Profile</string>
     <!-- Opportunity Creation -->
-    <string name="create_opportunity_title">Create New Opportunity</string>
+    <string name="create_opportunity_title">Create Opportunity</string>
     <string name="opportunity_title">Title</string>
     <string name="opportunity_description">Description</string>
     <string name="opportunity_location">Location</string>
@@ -57,8 +57,8 @@
     <string name="title_logout">Logout</string>
     
     <!-- Navigation Header -->
-    <string name="nav_header_title">VOH</string>
-    <string name="nav_header_subtitle">Volunteer Opportunities Hub</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     
     <!-- Other strings -->
@@ -72,4 +72,11 @@
     <string name="saved">Saved</string>
     <string name="profile">Profile</string>
     <string name="opportunity_details">Opportunity Details</string>
+    <string name="no_email">No email available</string>
+    <string name="anonymous_user">Anonymous User</string>
+    <string name="requirements">Requirements</string>
+    <string name="apply">Apply</string>
+    <string name="save">Save</string>
+    <string name="unsave">Unsave</string>
+    <string name="applied">Applied</string>
 </resources>
